[update] cors [#268]